<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginTop="15dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/logo_default"
                android:contentDescription="@string/app_name" />




            <EditText
                android:padding="15dp"
                android:id="@+id/register_name"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_person_blue"
                android:drawablePadding="10dp"
                android:hint="@string/name_surname"
                android:layout_marginHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:inputType="textPersonName"
                android:layout_marginTop="20dp"
                android:autofillHints="" />



            <EditText
                android:padding="15dp"
                android:id="@+id/register_email"
                android:textSize="12sp"
                android:drawableStart="@drawable/mail_blue_icon"
                android:drawablePadding="10dp"
                android:hint="@string/your_email"
                android:layout_marginHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:autofillHints="" />

            <EditText
                android:padding="15dp"
                android:id="@+id/register_phone_number"
                android:textSize="12sp"
                android:drawableStart="@drawable/phone_blue"
                android:drawablePadding="10dp"
                android:hint="@string/your_phone"
                android:layout_marginHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:inputType="phone"
                android:layout_marginTop="20dp"
                android:autofillHints="" />


            <EditText
                android:layout_marginTop="15dp"
                android:padding="15dp"
                android:id="@+id/register_password"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:autofillHints="" />



            <EditText
                android:layout_marginTop="15dp"
                android:padding="15dp"
                android:id="@+id/register_re_password"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="@string/re_password"
                android:layout_marginHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:autofillHints="" />



            <EditText
                android:layout_marginTop="15dp"
                android:padding="15dp"
                android:id="@+id/reference_code"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_baseline_code_22"
                android:drawablePadding="10dp"
                android:hint="@string/reference_code"
                android:layout_marginHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:autofillHints="" />



            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_marginTop="20dp"
                android:id="@+id/register_gender"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="12sp"
                    android:layout_marginRight="10dp" />
                <RadioButton android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="12sp"
                    android:layout_marginLeft="10dp"
                    />
            </RadioGroup>

            <Button
                android:id="@+id/doRegister"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginHorizontal="15dp"
                android:textColor="#fff"
                android:backgroundTint="@color/colorAccent"
                />

            <LinearLayout
                android:paddingVertical="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:text="@string/already_have_account"
                    />
                <TextView
                    android:id="@+id/login"
                    android:textColor="#000"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:text="@string/do_login"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>