<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginTop="15dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/logo_default"
                />





            <EditText
                android:padding="15dp"
                android:id="@+id/forgot_email"
                android:textSize="12sp"
                android:drawableStart="@drawable/mail_blue_icon"
                android:drawablePadding="10dp"
                android:hint="@string/your_email"
                android:layout_marginHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                />



            <Button
                android:id="@+id/forgot"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_reset_code"
                android:layout_marginHorizontal="15dp"
                android:textColor="#fff"
                android:backgroundTint="@color/colorAccent"
                />

            <LinearLayout
                android:paddingVertical="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:padding="15dp"
                    android:id="@+id/go_login"
                    android:textColor="#000"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:text="@string/do_login"
                    />
                <TextView
                    android:padding="15dp"
                    android:id="@+id/go_register"
                    android:textColor="#000"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:text="@string/register"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>