<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="52dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_marginHorizontal="5dp"
        android:id="@+id/createNewThread"
        android:text="@string/new_ticket"
        android:textSize="12sp"
        android:drawableStart="@drawable/ic_baseline_add_box_24"
        android:drawablePadding="-22dp"
        android:backgroundTint="#433efe"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.payquestion.payquest.Adapters.EmptyRecyclerView
            android:id="@+id/threadsRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/emptyTicketData"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/close"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tickets_title"
                android:fontFamily="sans-serif-thin"
                android:textSize="25sp"
                />
            <TextView
                android:textAlignment="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tickets_description"
                android:textSize="12sp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>