<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="52dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.payquestion.payquest.Adapters.EmptyRecyclerView
                android:id="@+id/missionsRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:gravity="center"
                android:id="@+id/noMission"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/timer"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_any_mission"
                    android:textSize="30sp"
                    />
                <TextView
                    android:textAlignment="center"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no_mission_desc"
                    android:textSize="12sp"
                    />

                <LinearLayout
                    android:id="@+id/timerLayout"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/remainsSecond"
                        android:text="@string/timestamp_faker"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/takeNewMissions"
                            android:layout_width="match_parent"
                            android:text="@string/take_new_missions"
                            android:textSize="12sp"
                            android:backgroundTint="#E91E63"
                            android:textColor="@color/colorWhite"
                            android:layout_height="wrap_content" />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/skipSeconds"
                            android:layout_width="match_parent"
                            android:backgroundTint="#fff"
                            android:text="Süreyi Atla"
                            android:textSize="12sp"

                            android:drawablePadding="4dp"
                            android:drawableStart="@drawable/ic_diamond_24"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/reduceWaiting"
                            android:layout_width="wrap_content"
                            android:text="Diamond Kazan"
                            android:drawableTint="@color/colorWhite"
                            android:textSize="12sp"
                            android:drawableStart="@drawable/ic_diamond_24"
                            android:drawablePadding="4dp"
                            android:backgroundTint="#433efe"
                            android:textColor="@color/colorWhite"
                            android:layout_height="wrap_content" />
                    </LinearLayout>


                </LinearLayout>



            </LinearLayout>
        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>